Tweak sizing in em/pt/px; and fix spacing on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ html, body {
 
 .post .body blockquote {
     margin: 2em 15%;
-    font-size: 20px;
+    font-size: 1.25em;
     font-style: italic;
     font-weight: 400;
 }
@@ -30,3 +30,9 @@ html, body {
     margin-bottom: 2em;
 }
 
+@media only screen and (max-width: 768px) {
+    .post .body blockquote {
+        margin: 2em 10%;
+    }
+}
+        
